# my-personal-website

./: .gitignore  DEPLOYMENT.md  Makefile  README.md  env.example  install.sh  pyproject.toml  requirements-dev.txt  requirements-liara.txt  requirements-prod.txt  requirements.txt
content/: admin.py  api.py  api_urls.py  context_processors.py  feeds.py  forms.py  models.py  sitemaps.py  urls.py  views.py
content/fixtures/: sample_data.json
content/migrations/: 0001_initial.py
content/templatetags/: content_extras.py
content/tests/: test_api.py  test_feeds.py  test_models.py  test_more_views.py  test_sitemaps.py  test_views.py
personal_site/: asgi.py  settings.py  settings_prod.py  urls.py  wsgi.py  wsgi_liara.py
static/css/: site.css
templates/: base.html  robots.txt
templates/components/: pagination.html
templates/content/: about.html  category_detail.html  contact.html  contact_success.html  home.html  post_detail.html  post_list.html  project_detail.html  project_list.html  search.html  tag_detail.html
theme/: __init__.py  apps.py
